Adjusted rendering to prevent vertical scrollbars appearing when horizontal ones do

--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -1,9 +1,8 @@
 body {
     background-color: #252927;
+    margin: 0;
     padding: 0;
-    margin: 10px;
 }
-
 
 #app {
     font-family: sans-serif;
